methods.returning.MethodsReturning.scala.code
var vuBiscuit = false
def haveBaggle():Boolean = {
  for ( a <- 1 to 6) {
 	 if estSurBiscuit()==true {
    	vuBiscuit=true
  	}
    avance();
  }
  return vuBiscuit
}

while (haveBaggle()==false){
  avance(); droite(); avance(); gauche();
}